--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-parallax-tilt": "^1.7.308",
     "react-router-dom": "^7.7.1",
     "viem": "^2.33.0",
     "wagmi": "^2.16.0"
